# fsspec-data

./: .buildinfo  .bumpversion.cfg  .copier-answers.yaml  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/fsspec_data/: index.doctree
.doctrees/autoapi/fsspec_data/_version/: index.doctree
.doctrees/autoapi/fsspec_data/backends/: index.doctree
.doctrees/autoapi/fsspec_data/backends/base/: index.doctree
.doctrees/autoapi/fsspec_data/backends/http/: index.doctree
.doctrees/autoapi/fsspec_data/backends/sqlalchemy/: index.doctree
.doctrees/autoapi/fsspec_data/filesystem/: index.doctree
.doctrees/autoapi/fsspec_data/interchange/: index.doctree
.doctrees/autoapi/fsspec_data/tests/: index.doctree
.doctrees/autoapi/fsspec_data/tests/conftest/: index.doctree
.doctrees/autoapi/fsspec_data/tests/test_all/: index.doctree
.doctrees/autoapi/fsspec_data/tests/test_filesystem/: index.doctree
.doctrees/docs/: api.doctree  explanation.doctree  how-to-chain-filesystems.doctree  how-to-integrate.doctree  tutorial.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml
_modules/: index.html
_modules/fsspec_data/: filesystem.html  interchange.html
_modules/fsspec_data/backends/: base.html  http.html  sqlalchemy.html
_modules/fsspec_data/tests/: conftest.html  test_all.html
_sources/: index.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/fsspec_data/: index.rst.txt
_sources/autoapi/fsspec_data/_version/: index.rst.txt
_sources/autoapi/fsspec_data/backends/: index.rst.txt
_sources/autoapi/fsspec_data/backends/base/: index.rst.txt
_sources/autoapi/fsspec_data/backends/http/: index.rst.txt
_sources/autoapi/fsspec_data/backends/sqlalchemy/: index.rst.txt
_sources/autoapi/fsspec_data/filesystem/: index.rst.txt
_sources/autoapi/fsspec_data/interchange/: index.rst.txt
_sources/autoapi/fsspec_data/tests/: index.rst.txt
_sources/autoapi/fsspec_data/tests/conftest/: index.rst.txt
_sources/autoapi/fsspec_data/tests/test_all/: index.rst.txt
_sources/autoapi/fsspec_data/tests/test_filesystem/: index.rst.txt
_sources/docs/: api.md.txt  explanation.md.txt  how-to-chain-filesystems.md.txt  how-to-integrate.md.txt
autoapi/: index.html
autoapi/fsspec_data/: index.html
autoapi/fsspec_data/_version/: index.html
autoapi/fsspec_data/backends/: index.html
autoapi/fsspec_data/backends/base/: index.html
autoapi/fsspec_data/backends/http/: index.html
autoapi/fsspec_data/backends/sqlalchemy/: index.html
autoapi/fsspec_data/filesystem/: index.html
autoapi/fsspec_data/interchange/: index.html
autoapi/fsspec_data/tests/: index.html
autoapi/fsspec_data/tests/conftest/: index.html
autoapi/fsspec_data/tests/test_all/: index.html
autoapi/fsspec_data/tests/test_filesystem/: index.html
ci/: docker-compose.yml
docs/: Makefile  api.html  api.md  conf.py  explanation.html  explanation.md  how-to-chain-filesystems.html  how-to-integrate.html  how-to-integrate.md  make.bat  tutorial.html  tutorial.md
fsspec_data/: __init__.py  filesystem.py  interchange.py
fsspec_data/backends/: __init__.py  base.py  http.py  sqlalchemy.py
fsspec_data/tests/: conftest.py  test_all.py  test_filesystem.py
rust/: Cargo.toml  Makefile
rust/python/: lib.rs
rust/src/: codec.rs  error.rs  lib.rs  plan.rs  stream.rs
