[build-system]
requires = [
    "hatchling",
    "hatch-rs>=0.2.1",
]
build-backend = "hatchling.build"

[project]
name = "fsspec-data"
authors = [
    {name = "the fsspec-data authors", email = "t.paine154@gmail.com"},
]
description = "Arrow interchange planning for the fsspec data ecosystem"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.1.0"
requires-python = ">=3.11"
keywords = ["arrow", "data", "fsspec", "interchange"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "fsspec",
    "pyarrow",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-dist",
    "codespell",
    "hatchling",
    "hatch-rs",
    "mdformat",
    "mdformat-tables>=1",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "ty",
    "uv",
    "wheel",
]

[project.scripts]

[project.entry-points."fsspec.specs"]
"fsspec-data" = "fsspec_data.filesystem:DataFileSystem"

[project.urls]
Repository = "https://github.com/1kbgz/fsspec-data"
Homepage = "https://github.com/1kbgz/fsspec-data"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "fsspec_data/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "rust/Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.coverage.run]
branch = true
omit = [
    "fsspec_data/tests/integration/",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 10

[tool.codespell]
ignore-words-list = "fo"

[tool.hatch.build]
artifacts = [
    "fsspec_data/*.dll",
    "fsspec_data/*.dylib",
    "fsspec_data/*.so",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.hooks.hatch-rs]
verbose = true
abi3 = true
module = "fsspec_data"
path = "."

[tool.hatch.build.targets.sdist]
packages = [
    "fsspec_data",
    "rust",
    "Cargo.toml",
    "Cargo.lock",
]
exclude = [
    "target",
]

[tool.hatch.build.targets.wheel]
packages = [
    "fsspec_data",
]

[tool.hatch.build.targets.wheel.shared-data]

[tool.pytest.ini_options]
addopts = [
    "-vvv",
    "--junitxml=junit.xml",
]
testpaths = "fsspec_data/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = [
    "I",
]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = [
    "fsspec_data",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "F403",
]

[tool.yardang]
title = "fsspec-data"
root = "README.md"
pages = [
    "docs/tutorial.md",
    "docs/how-to-integrate.md",
    "docs/how-to-chain-filesystems.md",
    "docs/explanation.md",
    "docs/api.md",
]
use-autoapi = true
